[gd_scene load_steps=12 format=2]

[ext_resource path="res://MiMo/Common/Draggable_Sprite/Draggable_Sprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://MiMo/Common/Cassette/Assets/cassette_dithering.png" type="Texture" id=2]
[ext_resource path="res://MiMo/Common/Cassette/Cassette.gd" type="Script" id=3]
[ext_resource path="res://MiMo/Common/Cassette/Assets/cassette_out_dithering.png" type="Texture" id=4]
[ext_resource path="res://MiMo/Common/Cassette/Bar.tscn" type="PackedScene" id=5]
[ext_resource path="res://AudioDeviceSystem/SequenceDevice/SequenceDevice.tscn" type="PackedScene" id=6]
[ext_resource path="res://AudioDeviceSystem/AudioAssets/SFX_Cas_Rec.wav" type="AudioStream" id=7]
[ext_resource path="res://AudioDeviceSystem/AudioAssets/SFX_Cas_Erase.wav" type="AudioStream" id=8]
[ext_resource path="res://AudioDeviceSystem/AudioAssets/SFX_Caset_Eject.wav" type="AudioStream" id=9]
[ext_resource path="res://AudioDeviceSystem/AudioAssets/SFX_Caset_Grab.wav" type="AudioStream" id=10]
[ext_resource path="res://AudioDeviceSystem/AudioAssets/SFX_Caset_Insert.wav" type="AudioStream" id=11]

[node name="Cassette" instance=ExtResource( 1 )]

z_index = 1
texture = ExtResource( 2 )
centered = false
script = ExtResource( 3 )
on_drag_texture = ExtResource( 4 )
on_ejected_texture = ExtResource( 4 )

[node name="Collision_Area" parent="Area2D" index="0"]

polygon = PoolVector2Array( 0, 0, 332, 0, 332, 120, 0, 120 )

[node name="Bar_00" parent="." index="1" instance=ExtResource( 5 )]

position = Vector2( 290, 20 )
_sections_unfolded = [ "Material", "Offset", "Transform", "Visibility" ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.4
one_shot = false
autostart = false

[node name="RecSFX" parent="." index="3" instance=ExtResource( 6 )]

Sounds = [ ExtResource( 7 ) ]

[node name="EraseSFX" parent="." index="4" instance=ExtResource( 6 )]

Sounds = [ ExtResource( 8 ) ]

[node name="SFX" parent="." index="5" instance=ExtResource( 6 )]

Sounds = [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ]
minVolume = -1.0


